--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -12,6 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/Reading">Current Readings</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/plot">Report/Analytics</a>
+      </li>
 
       <li class="nav-item">
         <a class="nav-link" href="/about">About Us</a>
