swithed analytics to area chart

--- a/templates/plot.html
+++ b/templates/plot.html
@@ -15,15 +15,19 @@
 
 {% block body %}
 <!-- Filter bar -->
-<div class="container">
-  <div class="well">
+
+  <div class="bg-faded" style="
+    padding: 20px 20px;
+    background-color: darkgray;
+    border-radius: 10px;
+">
     <input type="date" name="start_date" class="datepick" value="">
     <input type="date" name="end_date" class="datepick" value="">
     <button type="button" class="btn btn-primary" name="button">
       <i class="fa fa-search"></i>Filter
     </button>
   </div>
-</div>
+
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
 
@@ -31,53 +35,50 @@
 // $('.datepick').datepicker();
 $.get("/api/get_temp", function(data){
   Highcharts.chart('container', {
-
-      title: {
-          text: 'Solar Employment Growth by Sector, 2010-2016'
-      },
-
-      subtitle: {
-          text: 'Source: thesolarfoundation.com'
-      },
-
-      yAxis: {
-          title: {
-              text: 'Number of Employees'
-          }
-      },
-      legend: {
-          layout: 'vertical',
-          align: 'right',
-          verticalAlign: 'middle'
-      },
-
-      plotOptions: {
-          series: {
-              label: {
-                  connectorAllowed: false
-              },
-              pointStart: 2010
-          }
-      },
-
-      series: data,
-
-      responsive: {
-          rules: [{
-              condition: {
-                  maxWidth: 500
-              },
-              chartOptions: {
-                  legend: {
-                      layout: 'horizontal',
-                      align: 'center',
-                      verticalAlign: 'bottom'
-                  }
-              }
-          }]
-      }
-
-  });
+    chart: {
+        type: 'area'
+    },
+    title: {
+        text: 'Historic and Estimated Worldwide Population Distribution by Region'
+    },
+    subtitle: {
+        text: 'Source: Wikipedia.org'
+    },
+    xAxis: {
+        categories: data.categories,
+        tickmarkPlacement: 'on',
+        title: {
+            enabled: false
+        }
+    },
+    yAxis: {
+        title: {
+            text: 'Percent'
+        }
+    },
+    tooltip: {
+        pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.percentage:.1f}%</b> ({point.y:,.0f})<br/>',
+        split: true
+    },
+    plotOptions: {
+        area: {
+            stacking: 'percent',
+            lineColor: '#ffffff',
+            lineWidth: 1,
+            marker: {
+                lineWidth: 1,
+                lineColor: '#ffffff'
+            }
+        }
+    },
+    series: [{
+        name: 'Temperature',
+        data: data.temperature
+    }, {
+        name: 'Humidity',
+        data: data.humidity
+    }]
+});
 });
 
 
