--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -13,6 +13,9 @@
         <a class="nav-link" href="/Reading">Current Readings</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/settings">Settings</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/plot">Report/Analytics</a>
       </li>
 
