--- a/templates/about.html
+++ b/templates/about.html
@@ -2,46 +2,58 @@
 
 {% block body %}
 
-<div class="jumbotron text-center">
+<div class="jumbotron text-center" style="background:cyan">
     <p class="lead"> About Us Page</p>
 </div>
 
 <div class="container">
-  <div class="card-group">
-  <div class="card">
-    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar3.png" alt="Danish Ali">
-    <div class="card-body">
-      <h5 class="card-title">Danish Ali</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  <div class="row">
+    <div class="col-md-3 offset-md-1">
+      <div class="card-group">
+        <div class="card">
+          <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar3.png" alt="Danish Ali">
+          <div class="card-body">
+            <h5 class="card-title">Danish Ali</h5>
+            <p class="card-text">@danish.</p>
+            <p class="card-text"><small class="text-muted">danish.ali@student.griffith.ie</small></p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-block">Profile</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="card-footer">
-      <a href="#" class="btn btn-primary btn-block">Profile</a>
+    <div class="col-md-3 offset-md-1">
+      <div class="card-group">
+        <div class="card">
+          <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar3.png" alt="Danish Ali">
+          <div class="card-body">
+            <h5 class="card-title">Thohiru Omoloye</h5>
+            <p class="card-text">@cleansoft.</p>
+            <p class="card-text"><small class="text-muted">thohiru.omoloye@student.griffith.ie</small></p>
+          </div>
+          <div class="card-footer">
+            <a href="https://www.linkedin.com/in/tohiromoloye/" class="btn btn-primary btn-block">Profile</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 offset-md-1">
+      <div class="card-group">
+        <div class="card">
+          <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar3.png" alt="Danish Ali">
+          <div class="card-body">
+            <h5 class="card-title">Charles Banda</h5>
+            <p class="card-text">@Charles</p>
+            <p class="card-text"><small class="text-muted">charles.banda@student.griffith.ie</small></p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-block">Profile</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="card">
-    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar3.png" alt="Thohiru">
-    <div class="card-body">
-      <h5 class="card-title">Thohiru Omoloye</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-    <div class="card-footer">
-      <a href="#" class="btn btn-primary btn-block">Profile</a>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar3.png" alt="Charles">
-    <div class="card-body">
-      <h5 class="card-title">Charles Banda</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-    <div class="card-footer">
-      <a href="#" class="btn btn-primary btn-block">Profile</a>
-    </div>
-  </div>
-</div>
 </div>
 
 
