"Python Code DHT_11 Fixed"

--- a/templates/plot.html
+++ b/templates/plot.html
@@ -62,7 +62,7 @@ function plot(start_date_, end_date_) {
           }
       },
       tooltip: {
-          pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.percentage:.1f}%</b> ({point.y:,.0f})<br/>',
+          pointFormat: '<span style="color:{series.color}">{series.name}</span>:({point.y:,0:0.1f})<br/>',
           split: true
       },
       plotOptions: {
