Reading Page Gauge Addition {Highcharts}

--- a/templates/Reading.html
+++ b/templates/Reading.html
@@ -1,38 +1,268 @@
+
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/highcharts-more.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+
+
 {% extends 'layout.html' %}
-
 {% block body %}
+<style>
 
-<meta http-equiv="refresh" content="5" >
-<div class="panel-body">
-<div class="jumbotron text-center">
-    <div class="lead" style="margin-top: 5%">
-            <h1>Real time conditions</h1>
+    .highcharts-credits{
 
-            <br>
+        display:none; !important
+    }
+    .highcharts-button-symbol {
 
-            <p style="
-             font: 'Arial Narrow', sans-serif;
+     display:none; !important
+    }
+    .highcharts-label-box highcharts-data-label-box {
 
-  font-size: 42px;
-  padding: 80px 50px;
-  text-align: center;
-  text-transform: uppercase;
-  text-rendering: optimizeLegibility;
+
+    }
 
 
 
-">
+</style>
 
-                Temperature: {{"{0:0.1f}".format(temp) }}°F <br>
-                Humidity: {{"{0:0.1f}".format(hum)}}% <br>
-                Flame Sensor Status : {{status_flame}}
+<div id="container" style="min-width: 210px; height: 400px; margin: 0 auto"></div>
+<div id="container2" style="min-width: 210px; height: 400px; margin: 0 auto"></div>
+<script>
 
+    Highcharts.chart('container', {
 
-            </p>
+    chart: {
+        type: 'gauge',
+        plotBackgroundColor: null,
+        plotBackgroundImage: null,
+        plotBorderWidth: 0,
+        plotShadow: false
+    },
 
+    title: {
+        text: 'Current Temperature'
+    },
 
-        </div>
-</div>
-</div>
+    pane: {
+        startAngle: -150,
+        endAngle: 150,
+        background: [{
+            backgroundColor: {
+                linearGradient: { x1: 3, y1: 3, x2: 0, y2: 1 },
+                stops: [
+                    [0, '#FFF'],
+                    [1, '#333']
+                ]
+            },
+            borderWidth: 0,
+            outerRadius: '109%'
+        }, {
+            backgroundColor: {
+                linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1 },
+                stops: [
+                    [0, '#333'],
+                    [1, '#FFF']
+                ]
+            },
+            borderWidth: 1,
+            outerRadius: '107%'
+        }, {
+            // default background
+        }, {
+            backgroundColor: '#DDD',
+            borderWidth: 0,
+            outerRadius: '105%',
+            innerRadius: '103%'
+        }]
+    },
+
+    // the value axis
+    yAxis: {
+        min: -30,
+        max: 50,
+
+        minorTickInterval: 'auto',
+        minorTickWidth: 1,
+        minorTickLength: 10,
+        minorTickPosition: 'inside',
+        minorTickColor: '#666',
+
+        tickPixelInterval: 30,
+        tickWidth: 2,
+        tickPosition: 'inside',
+        tickLength: 10,
+        tickColor: '#666',
+        labels: {
+            step: 2,
+            rotation: 'auto'
+        },
+        title: {
+            text: 'Celsius (C)'
+        },
+        plotBands: [{
+            from: -30,
+            to: 10,
+            color: '#0fc0fc' // blue
+        },{
+            from: 10,
+            to: 22,
+            color: '#0ffc4b' // green
+        }, {
+            from: 22,
+            to: 30,
+            color: '#ffff00' // yellow
+        }, {
+            from: 30,
+            to: 50,
+            color: '#ff0000' // red
+        }]
+    },
+
+    series: [{
+        name: 'Temperature',
+        data: [{{temp}}],
+        tooltip: {
+            valueSuffix: ' Celsius (C)'
+        }
+    }]
+
+},
+// Add some life
+function (chart) {
+    if (!chart.renderer.forExport) {
+        setInterval(function () {
+            var point = chart.series[0].points[0],
+                newVal,
+                //inc = Math.round((Math.random() - 0.5) * 20);
+
+            newVal = point.y + inc;
+            if (newVal < 0 || newVal > 50) {
+                newVal = point.y - inc;
+            }
+
+            point.update(newVal);
+
+        }, 3000);
+    }
+});
+</script>
+
+<!-- Container2 -->
+<script>
+
+    Highcharts.chart('container2', {
+
+    chart: {
+        type: 'gauge',
+        plotBackgroundColor: null,
+        plotBackgroundImage: null,
+        plotBorderWidth: 0,
+        plotShadow: false
+    },
+
+    title: {
+        text: 'Current Humidity'
+    },
+
+    pane: {
+        startAngle: -150,
+        endAngle: 150,
+        background: [{
+            backgroundColor: {
+                linearGradient: { x1: 3, y1: 3, x2: 0, y2: 1 },
+                stops: [
+                    [0, '#FFF'],
+                    [1, '#333']
+                ]
+            },
+            borderWidth: 0,
+            outerRadius: '109%'
+        }, {
+            backgroundColor: {
+                linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1 },
+                stops: [
+                    [0, '#333'],
+                    [1, '#FFF']
+                ]
+            },
+            borderWidth: 1,
+            outerRadius: '107%'
+        }, {
+            // default background
+        }, {
+            backgroundColor: '#DDD',
+            borderWidth: 0,
+            outerRadius: '105%',
+            innerRadius: '103%'
+        }]
+    },
+
+    // the value axis
+    yAxis: {
+        min: 0,
+        max: 100,
+
+        minorTickInterval: 'auto',
+        minorTickWidth: 1,
+        minorTickLength: 10,
+        minorTickPosition: 'inside',
+        minorTickColor: '#666',
+
+        tickPixelInterval: 30,
+        tickWidth: 2,
+        tickPosition: 'inside',
+        tickLength: 10,
+        tickColor: '#666',
+        labels: {
+            step: 2,
+            rotation: 'auto'
+        },
+        title: {
+            text: 'Percent (%)'
+        },
+        plotBands: [{
+            from: 0,
+            to: 40,
+            color: '#0fc0fc' // Blue
+        }, {
+            from: 40,
+            to: 70,
+            color: '#0ffc4b' // Green
+        }, {
+            from: 70,
+            to: 100,
+            color: '#ff0000' // red
+        }]
+    },
+
+    series: [{
+        name: 'Humidity',
+        data: [{{hum}}],
+        tooltip: {
+            valueSuffix: 'Percent (%)'
+        }
+    }]
+
+},
+// Add some life
+function (chart) {
+    if (!chart.renderer.forExport) {
+        setInterval(function () {
+            var point = chart.series[0].points[0],
+                newVal,
+                //inc = Math.round((Math.random() - 0.5) * 20);
+
+            newVal = point.y + inc;
+            if (newVal < 0 || newVal > 50) {
+                newVal = point.y - inc;
+            }
+
+            point.update(newVal);
+
+        }, 3000);
+    }
+});
+</script>
 
 {% endblock %}
