Updated footer text

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
 <footer class="text-center" style="  border-top: 0.0625em solid lightgrey; bottom: 0; color: #000000;
   height: 5em; background-color: black">
   <p style=".col(12; @ta: center); padding: 1.25em; color: white">
-    <small>&copy; 2018 Danish Ali</small>
+    <small>&copy; 2018 Danish Ali | Thohiru Omoloye | Charles Banda</small>
   </p>
 </footer>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
