--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">
 <div class="jumbotron text-center">
-    <p class="lead"> This application is demo of flask framework. Includes templates/home.html</p>
+    <p class="lead"> &nbsp; </p>
    <button type="button" id="btn"><a class="nav-link" href="/Power">Power</a></button>
 
 
