--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1 class="text-center"> Home Assistance </h1>
+<h1 class="jumbotron text-center"> Home Assistance </h1>
 
 {% include 'includes/_navbar.html' %}
 
