--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,11 @@
     <title> Welcome to Templates/layouts</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+<style>
+    .jumbotron{
+        margin-bottom: 0rem;
+    }
+</style>
 <body>
 
 <h1 class="jumbotron text-center"> Home Assistance </h1>
