--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -16,7 +16,7 @@
         <a class="nav-link" href="/settings">Settings</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/plot">Report/Analytics</a>
+        <a class="nav-link" href="/plot">Analytics</a>
       </li>
 
       <li class="nav-item">
