--- a/templates/plot.html
+++ b/templates/plot.html
@@ -14,7 +14,29 @@
 
 {% block body %}
 <!-- Filter bar -->
+    <style>
+    .highcharts-background {
+        padding-top: 2rem;
+    }
+    .bg-faded {
+        margin-bottom: 2rem;
+    }
 
+     .highcharts-credits{
+
+        display:none; !important
+    }
+    .highcharts-button-symbol {
+
+     display:none; !important
+    }
+    .highcharts-label-box highcharts-data-label-box {
+
+
+    }
+
+
+    </style>
   <div class="bg-faded" style="
     padding: 20px 20px;
     background-color: darkgray;
